
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int RCore ;


 int DEFINE_CMD_DESCRIPTOR (int *,int ) ;
 int a ;
 int aa ;
 int aar ;
 int ab ;
 int ac ;
 int ad ;
 int ae ;
 int aea ;
 int aec ;
 int aep ;
 int af ;
 int afC ;
 int afb ;
 int afc ;
 int afi ;
 int afl ;
 int afll ;
 int afn ;
 int aft ;
 int afv ;
 int afvb ;
 int afvr ;
 int afvs ;
 int ag ;
 int age ;
 int agn ;
 int ah ;
 int ahi ;
 int ao ;
 int ar ;
 int ara ;
 int arw ;
 int as ;
 int ax ;

__attribute__((used)) static void cmd_anal_init(RCore *core) {
 DEFINE_CMD_DESCRIPTOR (core, a);
 DEFINE_CMD_DESCRIPTOR (core, aa);
 DEFINE_CMD_DESCRIPTOR (core, aar);
 DEFINE_CMD_DESCRIPTOR (core, ab);
 DEFINE_CMD_DESCRIPTOR (core, ac);
 DEFINE_CMD_DESCRIPTOR (core, ad);
 DEFINE_CMD_DESCRIPTOR (core, ae);
 DEFINE_CMD_DESCRIPTOR (core, aea);
 DEFINE_CMD_DESCRIPTOR (core, aec);
 DEFINE_CMD_DESCRIPTOR (core, aep);
 DEFINE_CMD_DESCRIPTOR (core, af);
 DEFINE_CMD_DESCRIPTOR (core, afb);
 DEFINE_CMD_DESCRIPTOR (core, afc);
 DEFINE_CMD_DESCRIPTOR (core, afC);
 DEFINE_CMD_DESCRIPTOR (core, afi);
 DEFINE_CMD_DESCRIPTOR (core, afl);
 DEFINE_CMD_DESCRIPTOR (core, afll);
 DEFINE_CMD_DESCRIPTOR (core, afn);
 DEFINE_CMD_DESCRIPTOR (core, aft);
 DEFINE_CMD_DESCRIPTOR (core, afv);
 DEFINE_CMD_DESCRIPTOR (core, afvb);
 DEFINE_CMD_DESCRIPTOR (core, afvr);
 DEFINE_CMD_DESCRIPTOR (core, afvs);
 DEFINE_CMD_DESCRIPTOR (core, ag);
 DEFINE_CMD_DESCRIPTOR (core, age);
 DEFINE_CMD_DESCRIPTOR (core, agn);
 DEFINE_CMD_DESCRIPTOR (core, ah);
 DEFINE_CMD_DESCRIPTOR (core, ahi);
 DEFINE_CMD_DESCRIPTOR (core, ao);
 DEFINE_CMD_DESCRIPTOR (core, ar);
 DEFINE_CMD_DESCRIPTOR (core, ara);
 DEFINE_CMD_DESCRIPTOR (core, arw);
 DEFINE_CMD_DESCRIPTOR (core, as);
 DEFINE_CMD_DESCRIPTOR (core, ax);
}
